--- a/TD-Cpp/TD-Cpp.vcxproj
+++ b/TD-Cpp/TD-Cpp.vcxproj
@@ -128,10 +128,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Arrays.cpp" />
-    <ClCompile Include="Loop.cpp" />
+    <ClCompile Include="Boucles.cpp" />
+    <ClCompile Include="Imperative.cpp" />
+    <ClCompile Include="Strings.cpp" />
     <ClCompile Include="Source.cpp" />
-    <ClCompile Include="Matrix.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
