--- a/TD-Cpp/TD-Cpp.vcxproj
+++ b/TD-Cpp/TD-Cpp.vcxproj
@@ -133,6 +133,9 @@
     <ClCompile Include="Strings.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Header.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
